# nemo

./: AUTHORS  COPYING.EXTENSIONS  ChangeLog  NEWS  README.md  THANKS  build_error.txt  build_error_tags.txt  build_output.txt  build_output_daemon.txt  build_output_llm.txt  build_output_llm_fix.txt  build_output_llm_fix_v3.txt  build_output_monitor.txt  build_output_monitor_fix.txt  build_output_server.txt  build_output_sqlite.txt  build_output_toon.txt  build_output_toon_fixed.txt  build_output_toon_fixed_v2.txt  generate_additional_file  kraken.pot  makepot  meson.build
action-layout-editor/: actions-tree.md  kraken-action-layout-editor.in  kraken_action_layout_editor.py  meson.build
cut-n-paste-code/: README
data/: dbus-interfaces.xml  kraken-autorun-software.desktop.in  kraken-autostart.desktop.in  kraken.FileManager1.service.in  kraken.desktop.in  kraken.service.in  kraken.xml.in  kraken_action.lang  kraken_search_helper.lang  meson.build  org.kraken.root.policy.in
data/icons/: meson.build
data/kraken-actions/: 90_new-launcher.kraken_action.in  90_new-workspace.kraken_action.in  91_delete-workspace.kraken_action.in  92_show-expo.kraken_action.in  action_i18n_strings.py  add-desklets.kraken_action.in  change-background.kraken_action.in  extract_action_strings  merge_action_strings  mount-archive.kraken_action.in  set-as-background.kraken_action.in  set-resolution.kraken_action.in
debian/: changelog  control  copyright  kraken-data.install  kraken.install  kraken.lintian-overrides  libkraken-extension-dev.install  libkraken-extension1.install  libkraken-extension1.symbols  not-installed  rules
docs/: dnd.txt  key_mouse_navigation.txt  kraken-connect-server.1  kraken-desktop.1  kraken-io.txt  kraken.1  kraken_manifesto.md  meson.build  style-guide.html
docs/reference/: meson.build
docs/reference/libkraken-extension/: libkraken-extension-docs.xml  libkraken-extension-sections.txt  meson.build
eel/: eel-accessibility.c  eel-gtk-extensions.c  eel-vfs-extensions.h
files/: meson.build
files/usr/share/kraken/: action-info.md  (+1 more)
gresources/: kraken-action-layout-editor.glade  kraken-action-layout-editor.gresource.xml  kraken-desktop-overlay.glade  kraken-file-management-properties.glade  kraken-search-bar.glade  kraken-shell-ui.xml  kraken-style-application.css  kraken-style-fallback-mandatory.css  kraken-style-fallback.css  kraken.gresource.xml  meson.build
kraken-core/: kraken-daemon-impl.c  kraken-daemon.c  kraken-daemon.h  kraken-daemon.service  kraken-search-test.c  meson.build
kraken-extensions/: kraken-sidebar-provider.c  kraken-sidebar-provider.h  meson.build
kraken-lib/: kraken-llm.c  kraken-llm.h  meson.build  toon.c  toon.h
libkraken-extension/: kraken-column-provider.c  kraken-column-provider.h  kraken-column.c  kraken-column.h  kraken-desktop-preferences.c  kraken-desktop-preferences.h  kraken-extension-i18n.h  kraken-extension-private.h  kraken-extension-types.h  kraken-file-info.c  kraken-file-info.h  kraken-info-provider.c  kraken-info-provider.h  kraken-location-widget-provider.c  kraken-location-widget-provider.h  kraken-menu-item.c  kraken-menu-item.h  kraken-menu-provider.c  kraken-menu-provider.h  kraken-menu.c  kraken-menu.h  kraken-name-and-desc-provider.c  kraken-name-and-desc-provider.h  kraken-property-page-provider.c  kraken-property-page-provider.h  kraken-property-page.c  kraken-property-page.h  kraken-simple-button.c  kraken-simple-button.h  meson.build
libkraken-private/: README  kraken-action-manager.c  kraken-action-manager.h  kraken-action-symbols.h  kraken-action.c  kraken-action.h  kraken-bookmark.c  kraken-bookmark.h  kraken-cell-renderer-disk.c  kraken-cell-renderer-disk.h  kraken-centered-placement-grid.c  kraken-clipboard-monitor.c  kraken-clipboard-monitor.h  kraken-clipboard.c  kraken-clipboard.h  kraken-column-chooser.c  kraken-column-chooser.h  kraken-column-utilities.c  kraken-column-utilities.h  kraken-dbus-manager.c  kraken-dbus-manager.h  kraken-debug.c  kraken-debug.h  kraken-default-file-icon.c  kraken-default-file-icon.h  kraken-desktop-directory-file.c  kraken-desktop-directory-file.h  kraken-desktop-directory.c  kraken-desktop-directory.h  kraken-desktop-icon-file.c  kraken-desktop-icon-file.h  kraken-desktop-link-monitor.c  kraken-desktop-link-monitor.h  kraken-desktop-link.c  kraken-desktop-link.h  kraken-desktop-metadata.c  kraken-desktop-metadata.h  kraken-desktop-utils.c  kraken-desktop-utils.h  kraken-directory-async.c  (+121 more)
po/: ChangeLog  POTFILES.in  POTFILES.skip  README
schema_test/: gschemas.compiled
search-helpers/: README.md  epub2text.kraken_search_helper  kraken-mso-to-txt.c  kraken-ppt-to-txt.c  meson.build  mso-ppt.kraken_search_helper  mso-xls.kraken_search_helper  mso.kraken_search_helper  odf.kraken_search_helper
src/: check-kraken  kraken-action-config-widget.c  kraken-action-config-widget.h  kraken-actions.h  kraken-application.c  kraken-application.h  kraken-autorun-software.c  kraken-blank-desktop-window.c  kraken-blank-desktop-window.h  kraken-bookmark-list.c  kraken-bookmark-list.h  kraken-bookmarks-window.c  kraken-bookmarks-window.h  kraken-config-base-widget.c  kraken-config-base-widget.h  kraken-connect-server-dialog-main.c  kraken-connect-server-dialog-nonmain.c  kraken-connect-server-dialog.c  kraken-connect-server-dialog.h  kraken-connect-server-operation.c  kraken-connect-server-operation.h  kraken-desktop-application.c  kraken-desktop-application.h  kraken-desktop-icon-grid-view.c  kraken-desktop-icon-grid-view.h  kraken-desktop-icon-view.c  kraken-desktop-icon-view.h  kraken-desktop-item-properties.c  kraken-desktop-item-properties.h  kraken-desktop-main.c  kraken-desktop-manager.c  kraken-desktop-manager.h  kraken-desktop-overlay.c  kraken-desktop-overlay.h  kraken-desktop-window.c  kraken-desktop-window.h  kraken-empty-view.c  kraken-empty-view.h  kraken-error-reporting.c  kraken-error-reporting.h  (+101 more)
test/: meson.build  test-copy.c  test-kraken-directory-async.c  test-kraken-search-engine.c  test-kraken-uri.c  test.c  test.h
utils/: gvfs-info.kraken_action
(+10 files in other folders)
